fixed spacing for add property

--- a/client/styles/default/styles.less
+++ b/client/styles/default/styles.less
@@ -363,7 +363,7 @@ footer {
 
 /* This is all the CSS for the add property transition */
 div.add-flex-div-show {
-  max-height: 500px;
+  max-height: 100rem;
   transition: max-height 0.5s ease-in;
 }
 
